--- a/po/et.po
+++ b/po/et.po
@@ -15,8 +15,8 @@ msgstr ""
 "Project-Id-Version: yelp MASTER\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=yelp&component=general\n"
-"POT-Creation-Date: 2011-01-06 13:30+0000\n"
-"PO-Revision-Date: 2011-01-10 15:33+0200\n"
+"POT-Creation-Date: 2011-02-09 22:40+0000\n"
+"PO-Revision-Date: 2011-02-10 08:04+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -693,8 +693,8 @@ msgid ""
 "The file ‘%s’ could not be parsed because one or more of its included files "
 "is not a well-formed XML document."
 msgstr ""
-"Faili „%s” pole võimalik analüüsida, kuna üks või rohkem selle poolt kaasatud "
-"faili pole korrektselt vormindatud XML-dokumendid."
+"Faili „%s” pole võimalik analüüsida, kuna üks või rohkem selle poolt "
+"kaasatud faili pole korrektselt vormindatud XML-dokumendid."
 
 msgid "Unknown"
 msgstr "Tundmatu"
@@ -737,6 +737,15 @@ msgstr "Kas asukohavälja saab kasutada ka otsignuväljana"
 
 msgid "Search..."
 msgstr "Otsimine..."
+
+msgid "Clear the search text"
+msgstr "Otsinguteksti puhastamine"
+
+msgid "Bookmark this page"
+msgstr "Käesoleva lehe lisamine järjehoidjatesse"
+
+msgid "Remove bookmark"
+msgstr "Järjehoidja eemaldamine"
 
 msgid "Loading"
 msgstr "Laadimine"
@@ -974,8 +983,8 @@ msgstr "_Kõik dokumendid"
 msgid "_Add Bookmark"
 msgstr "_Lisa järjehoidja"
 
-msgid "_Edit Bookmarks"
-msgstr "_Järjehoidjate redigeerimine"
+msgid "_Remove Bookmark"
+msgstr "_Eemalda järjehoidja"
 
 msgid "Find in Page..."
 msgstr "Otsi lehelt..."
@@ -992,11 +1001,6 @@ msgstr "Seda akent juhtiv YelpApplication instants"
 msgid "Read Later"
 msgstr "Loen hiljem"
 
-#. %s will be replaced with the name of a document
-#, c-format
-msgid "Bookmarks for %s"
-msgstr "Dokumendi „%s” järjehoidjad"
-
 #, c-format
 msgid "%i match"
 msgid_plural "%i matches"
@@ -1006,17 +1010,20 @@ msgstr[1] "%i vastavust"
 msgid "No matches"
 msgstr "Vastavused puuduvad"
 
-msgid "_Open Bookmark"
-msgstr "_Ava järjehoidja"
-
-msgid "Open Bookmark in New _Window"
-msgstr "Ava järjehoidja uues _aknas"
-
-msgid "_Remove Bookmark"
-msgstr "_Eemalda järjehoidja"
-
 msgid "Get help with GNOME"
 msgstr "Abistab GNOME kasutamisel"
+
+#~ msgid "_Edit Bookmarks"
+#~ msgstr "_Järjehoidjate redigeerimine"
+
+#~ msgid "Bookmarks for %s"
+#~ msgstr "Dokumendi „%s” järjehoidjad"
+
+#~ msgid "_Open Bookmark"
+#~ msgstr "_Ava järjehoidja"
+
+#~ msgid "Open Bookmark in New _Window"
+#~ msgstr "Ava järjehoidja uues _aknas"
 
 #~ msgid "Description Column"
 #~ msgstr "Kirjelduse veerg"
@@ -1201,9 +1208,6 @@ msgstr "Abistab GNOME kasutamisel"
 
 #~ msgid "Search results for \"%s\""
 #~ msgstr "Otsingu \"%s\" tulemused"
-
-#~ msgid "Repeat the search online at %s"
-#~ msgstr "Võrgust otsimise kordamine asukohas %s"
 
 #~ msgid ""
 #~ "a:about:an:are:as:at:be:broke:broken:by:can:can't:dialog:dialogue:do:"
