--- a/po/et.po
+++ b/po/et.po
@@ -15,8 +15,8 @@ msgstr ""
 "Project-Id-Version: yelp MASTER\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=yelp&component=general\n"
-"POT-Creation-Date: 2011-02-09 22:40+0000\n"
-"PO-Revision-Date: 2011-02-10 08:04+0200\n"
+"POT-Creation-Date: 2011-02-13 22:29+0000\n"
+"PO-Revision-Date: 2011-02-19 10:40+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -702,6 +702,25 @@ msgstr "Tundmatu"
 #, c-format
 msgid "The requested page was not found in the document ‘%s’."
 msgstr "Dokumendist „%s” ei leitud küsitud lehekülge."
+
+msgid "Indexed"
+msgstr "Indekseeritud"
+
+msgid "Whether the document content has been indexed"
+msgstr "Kas dokumendi sisu on indekseeritud või mitte"
+
+msgid "Document URI"
+msgstr "Dokumendi URI"
+
+msgid "The URI which identifies the document"
+msgstr "Dokumenti identifitseeriv URI"
+
+#, c-format
+msgid "No matching help pages found in “%s”."
+msgstr "„%s” alt ei leitud sobivaid abiteabe lehti."
+
+msgid "No matching help pages found."
+msgstr "Sobivaid abiteabe lehti ei leitud."
 
 #, c-format
 msgid "An unknown error occurred."
