--- a/po/et.po
+++ b/po/et.po
@@ -15,8 +15,8 @@ msgstr ""
 "Project-Id-Version: yelp MASTER\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=yelp&component=general\n"
-"POT-Creation-Date: 2011-02-13 22:29+0000\n"
-"PO-Revision-Date: 2011-02-19 10:40+0200\n"
+"POT-Creation-Date: 2011-02-21 21:28+0000\n"
+"PO-Revision-Date: 2011-02-22 09:41+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -802,6 +802,12 @@ msgstr "Redaktorirežiim"
 
 msgid "Enable features useful to editors"
 msgstr "Tekstiredaktorite kasulike võimaluste lubamine"
+
+msgid "Database filename"
+msgstr "Andmebaasifaili nimi"
+
+msgid "The filename of the sqlite database"
+msgstr "Sqlite andmebaasifaili nimi"
 
 msgid "XSLT Stylesheet"
 msgstr "XSLT-laaditabel"
