--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,24 @@
+Changes in 2.91.91:
+-------------------
+* Fixed wrong gsettings schema id and switched to rnds paths
+* Make Yelp appear in list of applications in the shell (Florian Müllner)
+* Updated translations:
+  ar    (Khaled Hosny)
+  bg    (Alexander Shopov)
+  ca    (Gil Forcada)
+  de    (Christian Kirbach)
+  es    (Daniel Mustieles)
+  et    (Ivar Smolin)
+  fr    (Laurent Coudeur, Gérard Baylard and Bruno Brouard)
+  he    (Yaron Shahrabani)
+  ko    (Changwoo Ryu)
+  nb    (Kjartan Maraas)
+  pa    (A S Alam)
+  sl    (Matej Urbančič)
+  sv    (Daniel Nylander)
+  uk    (Daniel Korostil)
+  zh_CN (Lele Long)
+
 Changes in 2.91.90:
 -------------------
 * Default to ghelp:gnome-help
