Updated Romanian translation

--- a/po/ro.po
+++ b/po/ro.po
@@ -981,7 +981,7 @@ msgstr "Un exemplu de control YelpView"
 
 #: ../libyelp/yelp-location-entry.c:342
 msgid "Bookmarks"
-msgstr "Marcaje"
+msgstr "Semne de carte"
 
 #: ../libyelp/yelp-location-entry.c:343
 msgid "A YelpBookmarks implementation instance"
@@ -1005,11 +1005,11 @@ msgstr "Curăță textul de căutare"
 
 #: ../libyelp/yelp-location-entry.c:835 ../libyelp/yelp-location-entry.c:1556
 msgid "Bookmark this page"
-msgstr "Marchează pagina asta"
+msgstr "Pune un semn de carte acestei pagini"
 
 #: ../libyelp/yelp-location-entry.c:846 ../libyelp/yelp-location-entry.c:1567
 msgid "Remove bookmark"
-msgstr "Elimină marcajul"
+msgstr "Elimină semnul de carte"
 
 #: ../libyelp/yelp-location-entry.c:1412
 msgid "Loading"
@@ -1314,7 +1314,7 @@ msgstr "_Navigare"
 
 #: ../src/yelp-window.c:239
 msgid "_Bookmarks"
-msgstr "_Marcaje"
+msgstr "_Semne de carte"
 
 #: ../src/yelp-window.c:242
 msgid "_New Window"
@@ -1330,11 +1330,11 @@ msgstr "To_ate documentele"
 
 #: ../src/yelp-window.c:256
 msgid "_Add Bookmark"
-msgstr "_Adăugare marcaj"
+msgstr "_Adaugă un semn de carte"
 
 #: ../src/yelp-window.c:261
 msgid "_Remove Bookmark"
-msgstr "Elimină ma_rcajul"
+msgstr "Elimină semnul de ca_rte"
 
 #: ../src/yelp-window.c:265
 msgid "Find in Page..."
@@ -1379,26 +1379,6 @@ msgstr "Ajutor pentru GNOME"
 #~ "Nu s-a putut analiza fișierul „%s” deoarece nu este un document „man” "
 #~ "bine formatat."
 
-#~ msgid "_Edit Bookmarks"
-#~ msgstr "_Editare favorite"
-
-#~ msgid "Bookmarks for %s"
-#~ msgstr "Favorite pentru %s"
-
-#~ msgid "_Open Bookmark"
-#~ msgstr "_Deschide un favorit"
-
-#~ msgid "Open Bookmark in New _Window"
-#~ msgstr "Deschide favoritul într-o _fereastră nouă"
-
-#~ msgid "<b>Accessibility</b>"
-#~ msgstr "<b>Accesibilitate</b>"
-
-#~ msgid "<b>Fonts</b>"
-#~ msgstr "<b>Fonturi</b>"
-
-#~ msgid "Add Bookmark"
-#~ msgstr "Adaugă favorit"
 
 #~ msgid "C_ase sensitive"
 #~ msgstr "Cu m_ajuscule semnificative"
@@ -1412,8 +1392,6 @@ msgstr "Ajutor pentru GNOME"
 #~ msgid "Re_name"
 #~ msgstr "Rede_numire"
 
-#~ msgid "_Bookmarks:"
-#~ msgstr "Favo_rite:"
 
 #~ msgid "_Browse with caret"
 #~ msgstr "_Navigare cu cursor"
@@ -1465,10 +1443,10 @@ msgstr "Ajutor pentru GNOME"
 #~ msgstr "Folosește setul de fonturi implicit al sistemului."
 
 #~ msgid "A bookmark titled %s already exists for this page."
-#~ msgstr "Pentru această pagină există deja un favorit cu titlul %s."
+#~ msgstr "Pentru această pagină există deja un semn de carte cu titlul %s."
 
 #~ msgid "A bookmark titled <b>%s</b> already exists for this page."
-#~ msgstr "Pentru această pagină există deja un favorit cu titlul <b>%s</b>."
+#~ msgstr "Pentru această pagină există deja un semn de carte cu titlul <b>%s</b>."
 
 #~ msgid "Help Topics"
 #~ msgstr "Sumar"
