--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+Changes in 2.91.92:
+-------------------
+* Updated translations:
+  en_GB (Bruce Cowan)
+  gl    (Fran Diéguez)
+  hu    (Gabor Kelemen)
+  id    (Dirgita)
+  lv    (Rudolfs Mazurs)
+  nl    (Wouter Bolsterlee)
+  or    (Manoj Kumar Giri)
+  pl    (Piotr Drąg)
+  pt    (Duarte Loreto)
+  ro    (Lucian Adrian Grijincu)
+  ru    (Yuri Myasoedov)
+
 Changes in 2.91.91:
 -------------------
 * Fixed wrong gsettings schema id and switched to rnds paths
