--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,22 @@
+Changes in 3.0.0
+----------------
+* Make sure all translations work (Kjartan Maraas)
+* Updated translations:
+  cs    (Marek Černocký, Petr Kovar)
+  da    (Anders Jenbo)
+  de    (Wolfgang Stöggl)
+  eu    (Inaki Larranaga Murgoitio)
+  hi    (Rajesh Ranjan)
+  it    (Milo Casagrande)
+  ja    (Jiro Matsuzawa)
+  mr    (Sandeep Shedmake)
+  pt_BR (Felipe Borges, Antonio Fernandes C. Neto)
+  ta    (Dr.T.Vasudevan)
+  tr    (Baris Cicek)
+  ug    (Abduxukur Abdurixit)
+  zh_HK (Chao-Hsiung Liao)
+  zh_TW (Chao-Hsiung Liao)
+
 Changes in 2.91.92:
 -------------------
 * Updated translations:
