[l10n]Fixes on Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-03-06 22:09+0100\n"
-"PO-Revision-Date: 2011-03-05 09:45+0100\n"
+"PO-Revision-Date: 2011-04-05 23:14+0200\n"
 "Last-Translator: Gil Forcada <gilforcada@guifi.net>\n"
 "Language-Team: Catalan <tradgnome@softcatala.org>\n"
 "Language: ca\n"
@@ -308,7 +308,7 @@ msgstr "Entreteniment"
 
 #: ../data/toc.xml.in.h:7
 msgid "Applications for viewing and manipulating graphics"
-msgstr "Aplicacions per a visualitzar i modificar gràfics"
+msgstr "Aplicacions per visualitzar i modificar gràfics"
 
 #: ../data/toc.xml.in.h:8
 msgid "Applications related to audio and video"
@@ -525,7 +525,7 @@ msgstr "Guies i manuals per a aplicacions que es connecten a la resta del món"
 
 #: ../data/toc.xml.in.h:64
 msgid "Guides for getting involved in development"
-msgstr "Guies per a involucrar-se en desenvolupament"
+msgstr "Guies per involucrar-se en desenvolupament"
 
 #: ../data/toc.xml.in.h:65
 msgid "Ham Radio"
@@ -537,7 +537,7 @@ msgstr "Paràmetres de maquinari"
 
 #: ../data/toc.xml.in.h:67
 msgid "Have some fun"
-msgstr "Divertir-se"
+msgstr "Diversió"
 
 #: ../data/toc.xml.in.h:68
 msgid "History"
@@ -549,7 +549,7 @@ msgstr "Entorns integrats de desenvolupament"
 
 #: ../data/toc.xml.in.h:70
 msgid "IRC Clients"
-msgstr "Clients del IRC"
+msgstr "Clients de l'IRC"
 
 #: ../data/toc.xml.in.h:71
 msgid "Image Processing"
@@ -633,7 +633,7 @@ msgstr "Notícies"
 
 #: ../data/toc.xml.in.h:90
 msgid "Numerical Analysis"
-msgstr "Anàlisis numèrica"
+msgstr "Anàlisi numèrica"
 
 #: ../data/toc.xml.in.h:91
 msgid "OCR"
@@ -752,7 +752,7 @@ msgstr "Paràmetres"
 #: ../data/toc.xml.in.h:121
 msgid "Settings users can manipulate to make their environment more pleasant"
 msgstr ""
-"Paràmetres que poden canviar els usuaris per a fer el seu entorn més còmode"
+"Paràmetres que poden canviar els usuaris per fer el seu entorn més còmode"
 
 #: ../data/toc.xml.in.h:122
 msgid "Simulation Games"
@@ -816,7 +816,7 @@ msgstr "Eines de text"
 
 #: ../data/toc.xml.in.h:137
 msgid "Tools to help you manage your computer"
-msgstr "Eines per a ajudar-vos a gestionar l'ordinador"
+msgstr "Eines per ajudar-vos a gestionar l'ordinador"
 
 #: ../data/toc.xml.in.h:138
 msgid "Translation Tools"
@@ -832,7 +832,7 @@ msgstr "Utilitats"
 
 #: ../data/toc.xml.in.h:141
 msgid "Utilities to help you get work done"
-msgstr "Utilitats per a ajudar-vos a fer la feina"
+msgstr "Utilitats per ajudar-vos a fer la feina"
 
 #: ../data/toc.xml.in.h:142
 msgid "Vector Graphics"
@@ -925,7 +925,7 @@ msgstr "No s'ha trobat la pàgina sol·licitada en el document «%s»."
 
 #: ../libyelp/yelp-document.c:266
 msgid "Indexed"
-msgstr "Índexat"
+msgstr "Indexat"
 
 #: ../libyelp/yelp-document.c:267
 msgid "Whether the document content has been indexed"
@@ -1044,7 +1044,7 @@ msgstr "Mostra el cursor de text"
 
 #: ../libyelp/yelp-settings.c:178
 msgid "Show the text cursor or caret for accessible navigation"
-msgstr "Mostra el cursor de text per la navegacció accessible"
+msgstr "Mostra el cursor de text per la navegació accessible"
 
 #: ../libyelp/yelp-settings.c:186
 msgid "Editor Mode"
@@ -1241,7 +1241,7 @@ msgstr "No s'ha trobat la pàgina"
 
 #: ../libyelp/yelp-view.c:1627
 msgid "Cannot Read"
-msgstr "No es pogut llegir"
+msgstr "No es pot llegir"
 
 #: ../libyelp/yelp-view.c:1633
 msgid "Unknown Error"
