--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Changes in 3.0.3
+----------------
+* Fixed parsing error on info URIs (Rupert Swarbrick)
+* Don't start duplicate XSLT transforms (Shaun McCance)
+* Fixed untranslated UI elements, bug #648840 (Matthias Clasen)
+
 Changes in 3.0.2
 ----------------
 * Adapt to JavaScript fixes in yelp-xsl
