--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+3.1.1
+=====
+* Update for changes in yelp-xsl (Shaun McCance)
+* Don't start duplicate Mallard transforms (Shaun McCance)
+* Fixed various bugs in info parsing/transformations (Rupert Swarbrick)
+* Added parameters for Mallard conditional processing (Shaun McCance)
+* Fixed untranslated UI elements, bug #648840 (Matthias Clasen)
+* Updated translations:
+  ca@valencia  (Carles Ferrando)
+  eo           (Kristjan SCHMIDT)
+  hu           (Gabor Kelemen)
+  sr           (Мирослав Николић)
+  sr@latin     (Мирослав Николић)
+
 Changes in 3.0.2
 ----------------
 * Adapt to JavaScript fixes in yelp-xsl
