--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Changes in 3.0.4
+----------------
+* Fixed crasher when searching on 64-bit systems
+* Fixed crash when opening URI after closing a window
+* Updated translations:
+  ca@valencia  (Carles Ferrando)
+  sr           (Мирослав Николић)
+
 Changes in 3.0.3
 ----------------
 * Fixed parsing error on info URIs (Rupert Swarbrick)
