Fixed a string in Brazilian Portuguese translation

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -146,7 +146,7 @@ msgstr "Seção 3f"
 
 #: ../data/man.xml.in.h:29
 msgid "Section 3nas"
-msgstr "Seçao 3nas"
+msgstr "Seção 3nas"
 
 #: ../data/man.xml.in.h:30
 msgid "Section 3p"
