Updated Belarusian translation.

--- a/po/be.po
+++ b/po/be.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp.master\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-07-24 20:13+0300\n"
-"PO-Revision-Date: 2011-07-24 20:12+0300\n"
+"POT-Creation-Date: 2011-09-04 19:28+0300\n"
+"PO-Revision-Date: 2011-09-04 19:29+0300\n"
 "Last-Translator: Ihar Hrachyshka <ihar.hrachyshka@gmail.com>\n"
 "Language-Team: Belarusian <i18n-bel-gnome@googlegroups.com>\n"
 "Language: be\n"
@@ -341,11 +341,11 @@ msgstr "Паслаць электронны ліст да %s"
 
 #: ../libyelp/yelp-view.c:1265
 msgid "_Open Link"
-msgstr "_Адчыніць спасылку"
+msgstr "_Адкрыць спасылку"
 
 #: ../libyelp/yelp-view.c:1270
 msgid "Open Link in New _Window"
-msgstr "Адчыніць спасылку ў _новым акне"
+msgstr "Адкрыць спасылку ў _новым акне"
 
 #: ../libyelp/yelp-view.c:1321
 msgid "_Save Image As..."
@@ -471,7 +471,7 @@ msgstr "_Новае акно"
 
 #: ../src/yelp-window.c:247
 msgid "_Close"
-msgstr "За_чыніць"
+msgstr "За_крыць"
 
 #: ../src/yelp-window.c:252
 msgid "_All Documents"
@@ -491,7 +491,7 @@ msgstr "Знайсці на старонцы..."
 
 #: ../src/yelp-window.c:275
 msgid "Open Location"
-msgstr "Адчыніць месцазнаходжанне"
+msgstr "Адкрыць месцазнаходжанне"
 
 #: ../src/yelp-window.c:301
 msgid "Application"
