--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,19 @@
+3.1.3
+=====
+* Fixed URI in location entry after link click in help URIs, #658023
+* Fixed crashes on info documents (Edward Sheldrake)
+* Updated translations:
+  be    (Ihar Hrachyshka)
+  ca    (Gil Forcada)
+  de    (Mario Blättermann)
+  fr    (Alexandre Franke)
+  gl    (Fran Dieguez)
+  id    (Andika Triwidada)
+  it    (Milo Casagrande)
+  pt_BR (Og B. Maciel)
+  ru    (Yuri Myasoedov)
+  ug    (Abduxukur Abdurixit)
+
 3.1.2
 =====
 * Added Unity to OnlyShowIn
