--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,22 @@
+3.1.4
+=====
+* Fixed loading of HTML and TXT documents
+* Updated translations:
+  ast   (Xandru Armesto)
+  en_GB (Bruce Cowan)
+  eo    (Tiffany Antopolski)
+  es    (Daniel Mustieles, Jorge González)
+  fa    (Arash Mousavi)
+  fi    (Timo Jyrinki)
+  ja    (Jiro Matsuzawa)
+  pa    (A S Alam)
+  pt    (Duarte Loreto)
+  sk    (Pavol Klačanský)
+  ta    (Dr.T.Vasudevan)
+  zh_CN (Yinghua Wang)
+  zh_HK (Chao-Hsiung Liao)
+  zh_TW (Chao-Hsiung Liao)
+
 3.1.3
 =====
 * Fixed URI in location entry after link click in help URIs, #658023
