--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+3.2.0
+=====
+* Open GNOME Help from the new system by default (Matthias Clasen)
+* Updated translations:
+  as          (Nilamdyuti Goswami)
+  ca@valencia (Carles Ferrando)
+  cs          (Marek Černocký)
+  da          (Aputsiaq Janussen)
+  eu          (Inaki Larranaga Murgoitio)
+  hi          (Rajesh Ranjan)
+  hu          (Gabor Kelemen)
+  ja          (Jiro Matsuzawa)
+  ko          (Changwoo Ryu)
+  sk          (Pavol Klačanský)
+
 3.1.4
 =====
 * Fixed loading of HTML and TXT documents
